--- a/public/view/vaccine.hbs
+++ b/public/view/vaccine.hbs
@@ -18,6 +18,10 @@
             <div class="content-container">
                <h1>What to do before, during and after getting vaccinated for COVID-19</h1>
                <p>
+                  After a long, stressful encounter with the COVID-19 virus, the entire world is finally relieved to get access to the vaccines. Getting a Covid-19 vaccine is essential as it protects against the COVID-19 virus.
+               </p>
+
+               <p>
                   Getting vaccinated is a massive moment for you, your family, community and the world.
                </p>
                <p>
@@ -241,7 +245,9 @@
                   <p>
                       Encourage others to get vaccinated and talk about the process and how it made you feel.
                   </p>
-   
+<p>
+                  Although you have received both doses of the Covid-19 vaccine, remember to take preventive measures, especially in public places. Remember that vaccination does not ensure complete immunity. So continue wearing masks and follow safe hygiene practices for self-protection and prevent virus transmission. Take both doses according to the schedule and encourage other people to get vaccinated. Stay safe, stay strong!
+   </p>
             </div>
          </div>
          <div class="columns image" style="background-image:url('../static/images/share\ and\ celebrate.jpg')">
