--- a/public/view/guidelines.hbs
+++ b/public/view/guidelines.hbs
@@ -13,8 +13,6 @@
 </head>
 <body style="background-color: rgb(68, 247, 187);> 
     {{>header}}
-    <br>
-    <br>
     <div class="about text-center">
         <h1>Guidelines</h1>
     </div>
@@ -127,3 +125,4 @@
         </div> 
 {{>footer}}
 </body>
+</html>
