--- a/public/view/hospital.hbs
+++ b/public/view/hospital.hbs
@@ -31,8 +31,8 @@
         <div class="face face1">
           <div class="content">
             <h2>State Government</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error illum ad dolor laudantium enim ipsa libero adipisci culpa</p>
-            <a href="#">Read More</a>
+            <p>The list of hospitals earmarked by the States/UTs along with the State specific help line numbers.</p>
+            <a href="state.hbs">Know More</a>
           </div>
         </div>
         <div class="face face2">
