--- a/public/view/index.hbs
+++ b/public/view/index.hbs
@@ -131,18 +131,18 @@
     <div class="row p-md-3 px-md-1">
       <div class="  col-md-6" style="background-color:rgb(0, 255, 174); height: 400px;">
       <p class="in_world text-center font-weight-bold">WORLD</p>
-      <p class="world_status text-center">Active: +{{WorldActive}} </p>
+      <p class="world_status text-center">New Cases: +{{WorldActive}} </p>
       <p class="world_status text-center">Last Update: {{WorldLastUpdate}} </p>
-      <p class="world_status text-center">New Cases: {{WorldNewCases}} </p>
+      {{!-- <p class="world_status text-center">New Cases: {{WorldNewCases}} </p> --}}
       <p class="world_status text-center">Total Cases: {{WorldTotalCases}} </p>
       <p class="world_status text-center">Total Deaths: {{WorldTotalDeaths}} </p>
       <p class="world_status text-center">Total Recovered: {{WorldRecoveredCases}} </p>
       </div>
       <div class=" col-md-6" style="background-color:rgba(12, 240, 168, 0.857); height: 400px;">
         <p class='in_india text-center font-weight-bold'>INDIA</p>
-        <p class="world_status text-center">Active: {{IndiaActive}} </p>
+        <p class="world_status text-center">New Cases: {{IndiaActive}} </p>
         <p class="world_status text-center">Last Update: {{IndiaLastUpdate}} </p>
-        <p class="world_status text-center">New Cases: {{IndiaNewCases}} </p>
+        {{!-- <p class="world_status text-center">New Cases: {{IndiaNewCases}} </p> --}}
         <p class="world_status text-center">Total Cases: {{IndiaTotalCases}} </p>
         <p class="world_status text-center">Total Deaths: {{IndiaTotalDeaths}} </p>
         <p class="world_status text-center">Total Recovered: {{IndiaRecoveredCases}} </p>
